# aoc2022

./: .gitignore
aoc_lib/: CMakeLists.txt  library.cpp  library.h
cmake_tutorial/: CMakeLists.txt  Sample.h  Sample.h.in  sample  sample.cpp
cpp20example/: CMakeLists.txt  main.cpp
day1/: CMakeLists.txt  main.cpp
day10/: day10  main.cpp  result.txt
day10a/: CMakeLists.txt  day10a  main.cpp
day1again/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
day3/: CMakeLists.txt  main.cpp
day3b/: CMakeLists.txt  main.cpp
day3c/: CMakeLists.txt  main.cpp  separate.cpp  separate.h
day4/: CMakeLists.txt  main.cpp
day5/: CMakeLists.txt  main.cpp
day6/: CMakeLists.txt  day6.cbp  main.cpp
day7/: CMakeLists.txt  day7  day7.cbp  dir.cpp  dir.h  main.cpp  parse.cpp  parse.h
day7/.cmake/api/v1/reply/: cache-v2-3710526534577d24aff5.json  cmakeFiles-v1-1ee72abc0058abb0be58.json  codemodel-v2-42472560cac235ed2c3d.json  codemodel-v2-a1dbaf35e6b96ce7b575.json  index-2022-12-07T16-58-18-0670.json  index-2022-12-07T22-08-55-0012.json  target-day7-Debug-9c102e47cf5768eb10ce.json  target-day7-Debug-d110daa67518dda3db4c.json
day7a/: CMakeLists.txt  main.cpp
day8/: CMakeLists.txt
day8a/: CMakeLists.txt  main.cpp
day9/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  library.cpp
